# api-ninja

./: Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: docker-image.yml  python-publish.yml
demo/: api.py  config.yaml  sample.generated.yaml
src/api_ninja/: cli.py  color.py  core.py  memory_store.py  models.py  plugin.py
src/api_ninja/agents/: flow_generator.py  planner.py  request_generator.py  result_evaluation.py
